--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -309,9 +309,9 @@ $(function() {
         if (data!='nope'){
           textarea.val("");
           contentEditable.html("");
-          $(data.comment).hide().appendTo(commentsContainer).fadeIn();
+          var appendedComment = $(data.comment).hide().appendTo(commentsContainer).fadeIn();
           //add the lightbox listener to the newly appended comment images
-          var commentimages = $(data.comment).find('.post-images a');
+          var commentimages = appendedComment.find('.post-images a');
           if (commentimages.length > 0) {
             var $images = commentimages;
             var $imagesGrouped = $images.filter('[data-group]');
