--- a/views/partials/comment_dynamic.handlebars
+++ b/views/partials/comment_dynamic.handlebars
@@ -1,4 +1,4 @@
-<article class="comment" data-comment-id="{{comment_id}}" data-comment-depth="{{depth}}">
+<article class="comment" data-comment-id="{{comment_id}}">
     <header>
         <img alt="Profile image of @{{username}}" class="author-image" src="/images/{{image}}" />
         <div class="comment-header-container">
