--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -134,7 +134,7 @@ $(function() {
     //this is here bc this is the first of our scripts to be linked in in the layout, and this should be the first thing the browser does
     window.onerror = function(errorMessage, source, lineno, colno, error){
         var errorstring = "error: "+errorMessage+"\noriginating from script: "+source+"on line "+lineno+" and column "+colno;
-        if(error.stack){
+        if(error && error.stack){
             errorstring+="\nfull stack trace: \n" + error.stack;
         }
         $.post("/admin/reporterror", {errorstring: errorstring});
