--- a/views/partials/comment_dynamic.handlebars
+++ b/views/partials/comment_dynamic.handlebars
@@ -1,4 +1,4 @@
-<article class="comment" data-comment-id="{{comment_id}}">
+<article class="comment" data-comment-id="{{comment_id}}" data-comment-depth="{{depth}}">
     <header>
         <img alt="Profile image of @{{username}}" class="author-image" src="/images/{{image}}" />
         <div class="comment-header-container">
@@ -15,14 +15,14 @@
     </header>
     <section class="content">
         {{{content}}}
-        {{{image_gallery}}}
+        {{#if image_gallery}}
+            {{{image_gallery}}}
+        {{/if}}
     </section>
     <footer class="toolbar">
-        {{#gt depth 4}}{{else}}
         <button type="button" class="button comment-toolbar-button reply-to-comment">
             Reply
         </button>
-        {{/gt}}
         <button type="button" class="button comment-toolbar-button delete-comment" id="{{comment_id}}" data-post-id="{{post_id}}" data-comment-id="{{comment_id}}">
             Delete
         </button>
