--- a/views/partials/comment_dynamic.handlebars
+++ b/views/partials/comment_dynamic.handlebars
@@ -15,16 +15,14 @@
     </header>
     <section class="content">
         {{{content}}}
-        {{#if image_gallery}}
+        {{#if imagesExist}}
             {{{image_gallery}}}
         {{/if}}
     </section>
     <footer class="toolbar">
-        {{#gt depth 4}}{{else}}
         <button type="button" class="button comment-toolbar-button reply-to-comment">
             Reply
         </button>
-        {{/gt}}
         <button type="button" class="button comment-toolbar-button delete-comment" id="{{comment_id}}" data-post-id="{{post_id}}" data-comment-id="{{comment_id}}">
             Delete
         </button>
