--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,14 +7,14 @@
   <title>{{#unless metadata.title}}sweet{{else}}{{metadata.title}}{{/unless}}</title>
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=BG7YpbbwpE">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=BG7YpbbwpE">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=BG7YpbbwpE">
-  <link rel="manifest" href="/site.webmanifest?v=BG7YpbbwpE">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=BG7YpbbwpE" color="#5bbad5">
-  <link rel="shortcut icon" href="/favicon.ico?v=BG7YpbbwpE">
-  <meta name="msapplication-TileColor" content="#ce1717">
-  <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=22062019">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=22062019">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=22062019">
+    <link rel="manifest" href="/site.webmanifest?v=22062019">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=22062019" color="#ce1717">
+    <link rel="shortcut icon" href="/favicon.ico?v=22062019">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff">
 
   <meta property="og:title" content="{{#unless metadata.title}}sweet{{else}}{{metadata.title}}{{/unless}}">
   <meta property="og:description" content="{{#unless metadata.description}}A trust and community-based lightweight social network.{{else}}{{metadata.description}}{{/unless}}">
